<resources>
    <string name="app_name">Yannick Soundboard</string>
    <string name="skrt">skrt</string>
    <string name="sue">süüüüüüüü</string>
    <string name="aufzumatem">Auf zum Atem</string>
    <string name="brrr">brrr</string>
    <string name="sheesh">sheesh</string>
    <string name="eyooo">bruh</string>
    <string name="skiskiska">skiskiska</string>
    <string name="skibidipapap">skibidipapap</string>
</resources>